CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2006 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/

$Id$


2006.September.5 (0.9.16)

  * Interface improvements:
    -----------------------
    * New slideshow tool! ("Slides", available in "Open" dialog.)
      Select each image to play, in the order you want them, and use the
      sliding scale to adjust speed, then click "Play" to begin the show.

      + The "Next" button and [Space], [Enter] and [Right Arrow] keys
        advance to the next slide manually.  (Clicking anywhere in the image
        advances, as well.)
      + The [Left Arrow] key goes to the previous slide.
      + The "Back" button and [Escape] ends playback.

      Note: Use slowest (leftmost) speed setting to disable automatic
      slide advancement.

    * Modified "Text" tool so that it correctly handles the 16-bit unicode
      characters that SDL sends.
      (The text buffer is held internally as an array of wchar_t, and
      makes uses of various wide-character functions.  It is converted
      back into 16-bit unicode characters to satisfy SDL_ttf.  Tested on
      Windows and Linux.)
      John Popplewell <john@johnnypops.demon.co.uk>

    * tuxpaint-import shell script now examines Tux Paint's configuration
      file (first in /usr/local/etc/tuxpaint, then /etc/tuxpaint, then $HOME)
      for the window size settings and saved-file directory options
      (rather than assuming a 640x480 screen and images saved in
      $HOME/.tuxpaint/saved/).

      Discovered (or assumed) window size and directory settings are shown
      when tuxpaint-import is first run (even with no arguments).

    * In windowed mode, Tux Paint tries to open its window in the center
      of the screen (if supported by the OS or window manager).

    * Improved some dialog text, including labels for "Yes/No" buttons.
      (Thanks to Vashti for suggestions.)
